welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:7: error: not found: value critMessage
				critMessage(c)
                                ^ColumnByColumn:14: error: not found: value x
		setPos(x,y)!=getPos(getMondeHauteur()-1,getMondeHauteur()-1)
                       ^